# pylaser2d

./: .gitignore  README.md  main.py  pyproject.toml  requirements_short.txt
config/: dense_scanner_spec.yaml  sparse_scanner_spec.yaml
data/test_map_1/: map.json
demos/: __init__.py  demo_random_map.py  demo_scan.py
src/: demo_geo.py  demo_occ.py  test_scanner.py  test_scanner_geo.py  test_scanner_occ.py
src/basic_laser_scanner/: laser_scanner.py  laser_scanner_occ.py
src/basic_map/: __init__.py  generator.py  map_geometric.py  map_occupancy.py
src/laser_scanner/: __init__.py  laser_output.py  laser_scanner.py  laser_scanner_geo.py  laser_scanner_occ.py
tests/: __init__.py  test_scanner_geo.py  test_scanner_occ.py
