[project]
name = "pylaser2d"
version = "0.1.0"
description = "A small lidar / laser scanner simulator in Python (2D)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "shapely>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/basic_laser_scanner", "src/basic_map"]

[tool.uv]
package = true
